[gd_scene load_steps=2 format=3 uid="uid://title"]

[ext_resource type="Script" path="res://src/ui/title/title.gd" id="1_script"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")
groups = [["i18n", ""]]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="LogoArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 180.0
offset_right = 200.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="GameTitle" type="Label" parent="LogoArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98, 0.95, 0.88, 1)
theme_override_font_sizes/font_size = 52
text = "기사의 여정"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="LogoArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.88, 0.82, 1)
theme_override_font_sizes/font_size = 20
text = "탐험과 전투의 세계"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "시작"

[node name="ContinueButton" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "이어하기"

[node name="SettingsButton" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "설정"

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "종료"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="SettingsPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsTitle" type="Label" parent="SettingsPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "설정"
horizontal_alignment = 1

[node name="LanguageLabel" type="Label" parent="SettingsPanel/Margin/VBox"]
layout_mode = 2
text = "언어"

[node name="LanguageOption" type="OptionButton" parent="SettingsPanel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="SettingsPanel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "돌아가기"

[node name="Footer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -36.0
offset_right = -20.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "v0.1  ·  탐험/전투 RPG"
horizontal_alignment = 1
vertical_alignment = 2
